--- a/app/src/main/res/menu/login.xml
+++ b/app/src/main/res/menu/login.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/miCompose"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_vector_compose"
         app:showAsAction="ifRoom"
         android:title="Compose">
     </item>
