--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ComposeActivity">
 
     <EditText
@@ -17,6 +18,7 @@
         android:hint="What's happening? "
         android:inputType="textMultiLine"
         android:maxLength="280"
+        android:backgroundTint="@color/twitter_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -33,6 +35,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="@color/twitter_blue"
         android:backgroundTint="@color/twitter_blue"
         android:text="Tweet"
         app:layout_constraintBottom_toTopOf="@+id/etNewTweet"
@@ -62,6 +65,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@color/white"
         android:tint="@color/twitter_blue"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
